--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "node_project",
   "version": "1.0.0",
+  "main": "server.js",
+  "start": "nodemon server.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
